[package]
name = "upload_my_image"
version = "0.1.0"
edition = "2021"
authors = ["YieldRay <yieldray@outlook.com>"]
description = "upload my image(s) to remote server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
clap = { version = "3.2.16", features = ["cargo", "derive"] }
reqwest = { version = "0.11", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
